<resources>
    <string name="debug_module_name">DebugToolBox</string>

    <string name="debug_box_status">Debug Bottle Status</string>
    <string name="debug_box_database">SQLite Viewer</string>
    <string name="debug_box_setting">Setting</string>
    <string name="debug_box_log">Log Viewer</string>
    <string name="debug_box_all_activities">All Activities</string>
    <string name="debug_box_sp_viewer">Shared Preferences Viewer</string>
    <string name="debug_box_leaks">Leak Reports</string>
    <string name="debug_box_blocks">Block Reports</string>
    <string name="debug_box_network_traffics">Network Traffics Viewer</string>
    <string name="debug_box_crashes">Crash Reports</string>
    <string name="debug_box_device_info">Device Information</string>
    <string name="debug_box_device_option">Option</string>
    <string name="debug_box_black_box_testing">Black-box Testing</string>
    <string name="debug_box_intents">Intent Entries</string>
    <string name="debug_box_runnable">Runnable Entries</string>
    <string name="debug_box_settings">Settings</string>
    <string name="permission_request_str">禁用存储空间权限，会影响程序的正常使用，请到设置->应用->权限中打开对应权限！</string>
    <string name="menu_net_traffics_delete">delete</string>
    <string name="menu_net_traffics_detail_share">share</string>
    <string name="menu_log_viewer_refresh">refresh</string>
    <string name="menu_debug_box_home_set">setting</string>

    <string name="debug_box_ntd_share_with">Share with…</string>

    <string name="option_developer">开发人员选项</string>

    <string name="setting_network_msg">Okhttp Listener Switcher</string>
    <string name="setting_leak_msg">Enable Leak Canary</string>
    <string name="setting_block_msg">Enable Block Canary</string>
    <string name="setting_block_threshold">Block Threshold (default:500ms)</string>
    <string name="setting_crash_msg">Enable Crash Canary</string>
    <string name="setting_notify_msg">Show Notify Switcher</string>
    <string name="setting_strict_msg">Strict Mode Switcher</string>

    <string name="dbinspector_app_name">DbInspector</string>
    <string name="dbinspector_structure">Structure</string>
    <string name="dbinspector_content">Content</string>
    <string name="dbinspector_action_settings">Settings</string>
    <string name="dbinspector_action_clear_table">Clear Table</string>
    <string name="dbinspector_clear_table_confirm">Do you want to delete the content of the table?</string>
    <string name="dbinspector_action_search">Search</string>
    <string name="dbinspector_action_copy">Copy</string>
    <string name="dbinspector_action_share">Share</string>
    <string name="dbinspector_previous">Previous</string>
    <string name="dbinspector_next">Next</string>
    <string name="dbinspector_pref_key_rows_per_page">prefs_key_row_per_page</string>
    <string name="dbinspector_rows_per_page">Rows per page</string>
    <string name="dbinspector_databases">Databases</string>
    <string name="dbinspector_foreign_keys">Foreign keys</string>
    <string name="dbinspector_indexes">Indexes</string>

    <string name="dbinspector_rows_per_page_default">10000</string>
    <string name="dbinspector_action_import">Import</string>
    <string-array name="dbinspector_rows_per_page_options">
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>500</item>
    </string-array>

</resources>
