<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="im.dino.dbview.DbViewActivity">

    <item
        android:id="@+id/dbinspector_action_copy"
        android:icon="@drawable/drw_dbinspector_copy"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/dbinspector_action_copy"/>

    <item
        android:id="@+id/dbinspector_action_share"
        android:icon="@drawable/drw_dbinspector_share"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/dbinspector_action_share"/>

    <item
        android:id="@+id/dbinspector_action_import"
        android:icon="@drawable/drw_dbinspector_file_upload"
        android:orderInCategory="103"
        android:showAsAction="ifRoom"
        android:title="@string/dbinspector_action_import"/>

</menu>
